[package]
name = "dbcviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
can-dbc = "6.0.0"
anyhow = "1.0.95"
iced = { features=["lazy"], version = "0.13.1" }
iced_aw="0.11.0"
iced_table = "0.13.0"
native-dialog = "0.7.0"
encoding="*"
winit = { features=["wayland-protocols"], version = "0.30.8"}